feat: integrate KaTeX for math rendering in React and Svelte examples, update dependencies, and enhance localization support

--- a/examples/react/src/locales/en.json
+++ b/examples/react/src/locales/en.json
@@ -4,6 +4,7 @@
   "streaming": "Streaming...",
   "renderOnce": "Render Once",
   "reset": "Reset",
+  "customComponents": "Use Custom Components",
   "chars": "chars",
   "blocks": "blocks",
   "pending": "pending",
